# golden-retriever

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: minicpm5-1b-rtx5060ti.md
data/base_smoke/: tasks.jsonl
data/seed/: tasks.jsonl
docs/: context-1-data-generation-status.md  context-1-public-benchmark-report.md  context-1-source-inventory.md  data-pipeline.md  experiments.md  pi-harness-extension.md
docs/plans/: 2026-07-06-context-1-full-scale-parity.md
models/minicpm5-1b-localdocs-format-lap1-lora-6144/: adapter_config.json  adapter_model.safetensors  training_metrics.json
models/minicpm5-1b-localdocs-thinking-lap2-aligned-lora-8192-e8/: adapter_config.json  adapter_model.safetensors  training_metrics.json
models/minicpm5-1b-mixed-synthdomains-localdocs-thinking-lap4-r16-all-lora-4096-e3/: adapter_config.json  tokenizer_config.json  training_metrics.json
models/minicpm5-1b-synthdomains-v1-thinking-r16-all-lora-2048-e3/: README.md  adapter_config.json  training_metrics.json
results/base-minicpm5/: README.md  base-smoke-closed-corpus.json  localdocs-v0-closed-corpus.json  localdocs-v0.md  seed-closed-corpus.json
results/context1-public/: base-minicpm5-longseal-smoke10.json  (+1 more)
scripts/: bench_minicpm5_vllm.sh
tests/: test_agent_loop.py  test_agent_state.py  test_agent_tools.py  test_benchmark_eval.py  test_benchmark_prepare.py  test_benchmark_schema.py  test_context1_bootstrap.py  test_context1_data_gen.py  test_dataset_eval.py  test_model_eval.py  test_progress.py  test_sft_data.py  test_synthetic.py  test_tools.py  test_train_lora_sft.py
(+48 files in other folders)
